# PointCloudPoseEstimation

./: CMakeLists.txt
data/: Cam21RotationMatrix.xml  Cam21TranslationMatrix.xml  Cam31RotationMatrix.xml  Cam31TranslationMatrix.xml  fraction1.pcd  fraction2.pcd  fraction3.pcd  model.pcd
include/: PointCloudPoseEstimation.h  PointCloudToolbox.cpp  PointCloudToolbox.h
src/: PointCloudPoseEstimation.cpp
